--- a/first branches.html
+++ b/first branches.html
@@ -3,8 +3,20 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        .box{
+            width: 600px;
+            height: 600px;
+            margin: 0 auto;
+            border: 1px solid #000;
+            box-shadow: 10px 10px 10px #ccc;
+            background-color: #cccccc;
+        }
+    </style>
 </head>
 <body>
+<div class="box">
 
+</div>
 </body>
 </html>
